--- a/main.css
+++ b/main.css
@@ -3,14 +3,14 @@
     --darker: #1F2937;
     --darkest: #000000;
     --light: #EEE;
-    --pink: #EC4899;
-    --purple: #8B5Cf6;
+    --blue: #94bef5;
+    --darkblue: #4b00fa;
 }
 
 *{
     box-sizing: border-box;
     margin: 0;
-    font-family:Georgia, 'Times New Roman', Times, serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
 body{
@@ -54,4 +54,53 @@ input, button{
     margin-right: 1rem;
     color: var(--light);
     font-size: 1.25rem
+}
+
+#new-taks-input::placeholder{
+    color: var(--dark);
+}
+
+#new-task-submit{
+    color: var(--blue);
+    font-size: 1.25rem;
+    font-weight: 700;
+    background-image: linear-gradient(to right, var(--blue), 
+    var(--darkblue));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    cursor: pointer;
+    transition: 0.4s;
+}
+
+#new-task-submit:hover{
+    opacity: 0.8;
+}
+
+#new-task-submit:active{
+    opacity: 0.8;
+}
+
+main{
+    flex: 1 1 0%;
+    padding: 2rem 1 rem;
+    max-width: 800px;
+    width: 100%;
+    margin: 0 auto;
+}
+
+.task-list{
+    padding: 1rem;
+}
+
+.task-list h2{
+    font-size: 1.5rem;
+    font-weight: 300;
+    color: var(--light);
+    margin-bottom: 1rem;
+}
+
+#tasks .task{
+    display: flex;
+    justify-content: space-between;
+
 }
